--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,4 @@
 
 [build]
-  command = "yarn build"
+  command = "npm run build"
   publish = "build"
-[build.environment]
-  YARN_VERSION = "1.9.4"
-  YARN_FLAGS = "--no-ignore-optional"
