--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "my-project",
-  "short_name": "my-project",
+  "name": "professional",
+  "short_name": "professional",
   "start_url": "/",
   "display": "standalone",
   "orientation": "portrait",
