--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,6 @@
-
 [build]
-  command = "npm run build"
+  command = "yarn build"
   publish = "build"
+[build.environment]
+  YARN_VERSION = "1.9.4"
+  YARN_FLAGS = "--no-ignore-optional"
